--- a/Week 1_Lesson 2/index.html
+++ b/Week 1_Lesson 2/index.html
@@ -104,10 +104,12 @@
                 </div>
                 <p> Vuoi rimanere aggiornato su altre novità del blog? Iscriviti alla nostra newsletter:</p>
                 <br>
-                <fieldset>
-                    <input type="text" placeholder="inserisci l'email">
-                    <input type="submit" value="Iscriviti!">
-                </fieldset>
+                <form>
+                    <fieldset>
+                        <input type="email" placeholder="inserisci l'email">
+                        <input type="submit" value="Iscriviti!">
+                    </fieldset>
+                </form>
             </section>
             <section class="related-articles">
                 <div class="title">
