--- a/Week 1_Lesson 3/index.html
+++ b/Week 1_Lesson 3/index.html
@@ -1,16 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Ricetta Focaccia</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     <header>
         <div class="logo">
             <img src="assets/img/logo.png" alt="logo_simply">
         </div>
+        <div class="sub-logo">
+            Part of <span>A SIMPLY FABULOUS THANKSGIVING</span>
+        </div>
     </header>
+    <main>
+        <section>
+            <div class="main-title">
+                <h1> Focaccia with Caramelized Onion, Cranberries and Brie</h1>
+            </div>
+            <div class="image-container">
+                <div class="img-description">
+                    Wow your taste buds with this festive focaccia appetizer topped with
+                    sweet caramelized onions, tart cranberries, and creamy brie. It will
+                    become your new favorite holiday starter!
+                </div>
+                <div class="main-img">
+                    <img src="assets/img/focaccia.png" alt="foccaccia">
+                    <figcaption class="caption-img"> Image: Sally Vegas</figcaption>
+                </div>
+            </div>
+            <div class="featured">
+                <span>FEATURED IN:</span> <br>
+                <a href="#"> Fresh Cranberry Recipes That Go Beyond Sauce</a>
+            </div>
+            <div class="ingredients">
+                <div class="ingredients-title">
+                    <h2> Ingredients </h2>
+                </div>
+                <div class="list-ingredients">
+                    <span> For the focaccia: </span>
+                    <ul>
+                        <li>4 cups (500g) all-purpose flour</li>
+                        <li>1 1/2 teaspoons instant yeast</li>
+                        <li>1 1/2 teaspoons salt</li>
+                        <li>1 3/4 cups (350g) lukewarm water</li>
+                        <li>1/4 cup extra virgin olive oil, plus more for the pan</li>
+                    </ul>
+                </div>
+                <div class="list-ingredients">
+                    <span> For the topping: </span>
+                    <ul>
+                        <li>3 medium yellow onions, thinly sliced</li>
+                        <li>1 tablespoon balsamic vinegar</li>
+                        <li>1-2 tablespoons olive oil, for brushing on top</li>
+                        <li>10 ounces brie, cut into cubes (scrape rind off with a paring knife
+                            if desired, though it’s not necessary)</li>
+                        <li>1 1/2 cups fresh or frozen cranberries</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="method">
+                <div class="method-title">
+                    <h2> Method </h2>
+                </div>
+                <div class="list-steps">
+                    <ol>
+                        <li class="step">
+                            <div class="step-name">
+                                Make the focaccia dough
+                            </div>
+                            <div class="step-description">
+                                In a medium-sized mixing bowl, or in a stand mixer with a paddle
+                                attachment, mix together all the dough ingredients until the flour
+                                is fully absorbed. You don't need to actually knead the dough,
+                                though I sometimes knead it a few times in the bowl when mixing by
+                                hand to incorporate the last of the flour...
+                            </div>
+                        </li>
+                    </ol>
+                </div>
+
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="read-more">
+            Read more on <span><a href="#"> Simply recipes</a></span>
+        </div>
+    </footer>
 </body>
+
 </html>
